[gd_scene load_steps=3 format=2]

[ext_resource path="res://client/client_ui.gd" type="Script" id=1]
[ext_resource path="res://client/client.gd" type="Script" id=2]

[node name="Client" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Connect" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 24.0

[node name="Host" type="LineEdit" parent="Panel/VBoxContainer/Connect"]
margin_right = 956.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "ws://localhost:8000/test/"
placeholder_text = "ws://my.server/path/"

[node name="Connect" type="Button" parent="Panel/VBoxContainer/Connect"]
margin_left = 960.0
margin_right = 1024.0
margin_bottom = 24.0
toggle_mode = true
text = "Connect"

[node name="Settings" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 52.0

[node name="Mode" type="OptionButton" parent="Panel/VBoxContainer/Settings"]
margin_right = 29.0
margin_bottom = 24.0

[node name="Multiplayer" type="CheckBox" parent="Panel/VBoxContainer/Settings"]
margin_left = 33.0
margin_right = 159.0
margin_bottom = 24.0
pressed = true
text = "Multiplayer API"

[node name="Destination" type="OptionButton" parent="Panel/VBoxContainer/Settings"]
margin_left = 163.0
margin_right = 192.0
margin_bottom = 24.0

[node name="Send" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 80.0

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/Send"]
margin_right = 977.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Enter some text to send..."

[node name="Send" type="Button" parent="Panel/VBoxContainer/Send"]
margin_left = 981.0
margin_right = 1024.0
margin_bottom = 24.0
text = "Send"

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/VBoxContainer"]
margin_top = 84.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="Client" type="Node" parent="."]
script = ExtResource( 2 )

[connection signal="toggled" from="Panel/VBoxContainer/Connect/Connect" to="." method="_on_Connect_toggled"]
[connection signal="item_selected" from="Panel/VBoxContainer/Settings/Mode" to="." method="_on_Mode_item_selected"]
[connection signal="pressed" from="Panel/VBoxContainer/Send/Send" to="." method="_on_Send_pressed"]
